subiendo avanze de mi proyecto

--- a/frontend/detalle-anuncio13.html
+++ b/frontend/detalle-anuncio13.html
@@ -32,10 +32,10 @@
   <h1>Detalle del anuncio</h1>
 
   <section class="detalle-anuncio">
-    <img src="img/Dellxps15.jpg" alt="Laptop Dell XPs 15">
+    <img src="img/CargadorUniversal90W.jpg" alt="Cargador Universal 90W">
     <div>
-      <h3>Laptop Dell XPs 15</h3>
-      <h3>Bs. 3500</h3>
+      <h3>Cargador Universal 90W</h3>
+      <h3>Bs. 110</h3>
       <button>Guardar anuncio</button>
     </div>
   </section>
@@ -43,7 +43,8 @@
 
   <section class="descripcion-mensaje">
     <h1>Descripcion</h1>
-    <p>Potente y elegante, la Dell XPS 15 ofrece alto rendimiento con pantalla de alta resolución, ideal para diseño, programación y multitarea exigente.
+    <p>Laptop Dell Inspiron 14 con pantalla Full HD, 
+      diseño delgado y rendimiento ideal para trabajo o estudio. Rápida, ligera y lista para acompañarte todo el día.
     </p>
     <h3>Mensaje</h3>
     <button>Enviar Mensaje</button>
