--- a/frontend/detalle-anuncio2.html
+++ b/frontend/detalle-anuncio2.html
@@ -32,10 +32,10 @@
   <h1>Detalle del anuncio</h1>
 
   <section class="detalle-anuncio">
-    <img src="img/Dellxps15.jpg" alt="Laptop Dell XPs 15">
+    <img src="img/MacBook_Pro.jpg" alt="Macbook pro">
     <div>
-      <h3>Laptop Dell XPs 15</h3>
-      <h3>Bs. 3500</h3>
+      <h3>Macbook Pro</h3>
+      <h3>Bs. 6200</h3>
       <button>Guardar anuncio</button>
     </div>
   </section>
@@ -43,7 +43,7 @@
 
   <section class="descripcion-mensaje">
     <h1>Descripcion</h1>
-    <p>Potente y elegante, la Dell XPS 15 ofrece alto rendimiento con pantalla de alta resolución, ideal para diseño, programación y multitarea exigente.
+    <p>Rendimiento profesional y diseño premium, la MacBook Pro es ideal para edición, programación y tareas exigentes, con batería duradera y pantalla Retina.
     </p>
     <h3>Mensaje</h3>
     <button>Enviar Mensaje</button>
@@ -52,7 +52,7 @@
 
   <section class="publicado-por">
     <h1>Publicado por</h1>
-    <p>juan perez</p>
+    <p>Luis Chávez</p>
     <p>juan@mail.com</p>
     <p>📍 Ubicación: Santa Cruz, Bolivia</p>
   </section>
