--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -27,21 +27,26 @@
       </nav>
     </header>
   <main class="main-container">
-    <h2>Registro</h2>
-    <form>
-      <label>Nombre Completo</label>
-      <input type="text">
-      <label>Correo electronico</label>
-      <input type="email">
-      <label>Contraseña</label>
-      <input type="password">
-      <button type="submit">
-        Registrarse
-      </button>
-      <p>La contraseña debe tener al menos 6 caracteres</p>
-      <p>¿Ya tienes cuenta?<a href="inicio-sesion.html">Iniciar sesion</a></p>
-    </form>
-  </main>
+  <h2>Registro</h2>
+  <form id="form-registro">
+    <label for="nombre">Nombre Completo</label>
+    <input type="text" id="nombre">
+    <div class="msg-error" id="error-nombre"></div>
+
+    <label for="correo">Correo electrónico</label>
+    <input type="email" id="correo">
+    <div class="msg-error" id="error-correo"></div>
+
+    <label for="contrasena">Contraseña</label>
+    <input type="password" id="contrasena">
+    <div class="msg-error" id="error-contrasena"></div>
+
+    <button type="submit">Registrarse</button>
+
+    <p>La contraseña debe tener al menos 6 caracteres</p>
+    <p>¿Ya tienes cuenta?<a href="inicio-sesion.html">Iniciar sesión</a></p>
+  </form>
+</main>
   <footer class="footer">
   <section class="preguntas-frecuentes">
     <h4>Preguntas Frecuentes</h4>
@@ -56,5 +61,6 @@
     <p>&copy; 2025 EncuentraTech. Todos los derechos reservados.</p>
   </div>
 </footer>
+<script src="../js/registro.js"></script>
 </body>
 </html>
