actualizando el proyecto v4

--- a/frontend/administracion-anuncios.html
+++ b/frontend/administracion-anuncios.html
@@ -38,14 +38,11 @@
   <span class="msg-error" id="error-precio"></span>
 
   <label for="categoria">Categoría</label>
-  <select id="categoria" name="categoria">
-    <option value="">Seleccione una categoría</option>
-    <option value="1">Laptops</option>
-    <option value="2">Gaming</option>
-    <option value="3">Accesorios</option>
-    <!-- Agrega más categorías si es necesario -->
-  </select>
+   <select id="categoria" name="categoria">
+     <option value="">Seleccione una categoría</option>
+   </select>
   <span class="msg-error" id="error-categoria"></span>
+
 
   <label for="imagenes">Imágenes</label>
   <input type="file" id="imagenes" name="imagenes" accept="image/*" multiple>
@@ -76,7 +73,7 @@
     <p>&copy; 2025 EncuentraTech. Todos los derechos reservados.</p>
   </div>
 </footer>
-<script src="../js/administracion-anuncios.js"></script>
+<script src="js/administracion-anuncios.js"></script>
 <script src="js/header.js"></script>
 </body>
 </html>
