--- a/frontend/chat-compras.html
+++ b/frontend/chat-compras.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="centrar-logo">
-      <h1 class="logo"><a href="inicio-usuario.html">EncuentraTech</a></h1>
+      <h1 class="logo"><a href="index.html">EncuentraTech</a></h1>
     </div>
     <nav class="menu">
       <label for="menu-switch" class="menu-mobile-label">
