--- a/frontend/detalle-anuncio.html
+++ b/frontend/detalle-anuncio.html
@@ -37,7 +37,7 @@
       <h1>Descripción</h1>
       <p id="descripcion-anuncio"></p>
       <h3>Mensaje</h3>
-      <button>Enviar Mensaje</button>
+      <button type="submit" id="btn-enviar-mensaje">Enviar Mensaje</button>
     </section>
 
     <section class="publicado-por">
