--- a/frontend/detalle-anuncio.html
+++ b/frontend/detalle-anuncio.html
@@ -29,7 +29,7 @@
       <div class="info-anuncio">
         <h3 id="titulo-anuncio"></h3>
         <h3 id="precio-anuncio"></h3>
-        <button>Guardar anuncio</button>
+        <button id="btn-guardar-anuncio">Guardar anuncio</button>
       </div>
     </section>
 
